[feat] back - store CRD 완성