@@ -27,43 +27,44 @@ public class StoreController {
     @PostMapping
     @Operation(summary = "매장 정보 등록")
     public ResponseEntity<StoreResponseDto> createStore(@RequestBody StoreRequestDto storeRequestDto) {
-        Store store = storeService.createStore(storeRequestDto);
-        return ResponseEntity.status(HttpStatus.CREATED).body(new StoreResponseDto(store));
+        StoreResponseDto response = storeService.createStore(storeRequestDto);
+        return ResponseEntity.ok(response);
     }
 
     // 매장 검색
 
     // 매장 정보 조회(단건)
+    @GetMapping("/{storeId}")
+    @Operation(summary = "매장 정보 조회(단건)")
+    public ResponseEntity<StoreResponseDto> getStore(@PathVariable Long storeId) {
+        StoreResponseDto response = storeService.getStore(storeId);
+        return ResponseEntity.ok(response);
+    }
 
-    // 매장 정보 수정
 
     // 매장 정보 삭제
+    @DeleteMapping("/{storeId}")
+    @Operation(summary = "매장 정보 삭제")
+    public ResponseEntity<String> deleteStore(@PathVariable Long storeId) {
+        storeService.deleteStore(storeId);
+        return ResponseEntity.ok().body("Success delete store");
+    }
+
 
     // 사장님이 가진 모든 매장 조회
     @GetMapping("/owner/{userId}")
     @Operation(summary = "OWNER인 {userId}에 해당하는 모든 store를 조회합니다.")
-    public ResponseEntity<List<StoreResponseAll>> findNotices(
+    public ResponseEntity<List<StoreResponseDto>> findNotices(
             @PathVariable Long userId) {
 
         List<Store> stores = storeService.findStores(userId);
 
-        List<StoreResponseAll> response = stores.stream()
-                .map(store -> new StoreResponseAll(store.getStoreId(), store.getStoreName()))
-                .collect(Collectors.toList());
+        List<StoreResponseDto> response = stores.stream()
+                .map(StoreResponseDto::new)
+                .toList();
 
         return ResponseEntity.ok(response);
     }
 
 
-    // ResponseBody
-    @Getter
-    public static class StoreResponseAll {
-        private final Long storeId;
-        private final String storeName;
-
-        public StoreResponseAll (Long storeId, String storeName) {
-           this.storeId = storeId;
-           this.storeName = storeName;
-        }
-    }
 }
